# holley-rec

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CONTEXT.md  LEARNING_THOMPSON_SAMPLING.md  Makefile  README.md  STATUS_LOG.md  context.md  package-lock.json  pyproject.toml
.claude/: settings.json
.gemini/: settings.json
agent_docs/: architecture.md  bigquery.md  bigquery_patterns.md  code_conventions.md  evaluation_guide.md  pipeline_debugger.md  postgres_treatments.md  sql_optimizer.md  testing_guide.md  treatment_analyst.md
configs/: dev.yaml  gnn.yaml  gnn_config.yaml  personalized_treatments.csv  static_treatments.csv
docs/: SESSION_2026_01_05_algorithm_analysis.md  SESSION_2026_01_06_match_rate_analysis.md  algorithm_iteration_log.md  apparel_vs_vehicle_parts_analysis_2025_12_27.md  bandit-models-deep-analysis.md  bandit_investigation_deck.pptx  bandit_investigation_report.md  bandit_investigation_report_v2.md  bigquery_schema.md  buying_behavior_analysis_2026_01_02.md  campaign_reports_2025_12_06.md  campaign_reports_2025_12_10.md  cf_analysis_2026_01_07.md  cross_campaign_uplift_analysis_2026_02_09.md  ctr_analysis_2025_12_26.md  decisions.md  fitment_user_engagement_report.docx  fitment_user_engagement_report.md  gcp_database_access_guide.md  gnn_architecture_proposal.md  holley_experiment_setup.md  known_issues.md  model_ctr_comparison_2025_12_17.md  personalized_underperformance_root_cause_2026_01_03.md  personalized_vs_static_uplift_report_2026_02_05.md  personalized_vs_static_uplift_report_v2.md  pipeline_architecture.md  pipeline_run_stats.md  post_launch_conversion_analysis_2026_01_02.md  post_purchase_uplift_analysis_2026_01_19.md  recommendation_match_rate_analysis_2026_01_06.md  release_notes.md  reverse_engineering_analysis.md  session-context-bandit-analysis.md  session_summary_2025_12_29.md  session_summary_2026_02_09.md  treatment_ctr_unbiased_analysis_2025_12_17.md  uplift_analysis_2025_12_26.md  v5_15_investigation_summary.md  weekly_updates.md
flows/: README.md  __init__.py  metaflow_runner.py  run.sh  score_gnn.py  train_gnn.py
learning/: THOMPSON_SAMPLING.md  bandit_ts_explainer_2025_12_20.md  claude_tips.md  slack_reply_metabase_2025_12_20.md
notebooks/: Holley_Treatment_Click_Bandit_Mode2.ipynb  Holley_Treatment_Click_Bandit_Model.ipynb  JCOM_Treatment_Click_Bandit_Model_Prod2 (1).ipynb  gnn_exploration.ipynb
plugins/: __init__.py  defaults.py
rec_engine/: __init__.py  contracts.py  plugins.py  run.py  topology.py
scripts/: run_eval.py  validate_sql.py
specs/: algorithm_fix_per_vehicle_sales_velocity.md  gnn_feasibility_research.md  gnn_option_a.md  gnn_recommendation_system.md  holley_gnn_flow_skeleton.py  template.md  v5_18_fitment_recommendations.md  v5_18_revenue_ab_test.md  v5_6_recommendations.md  v5_8_user_centric_recommendations.md  v5_9_category_aware_recommendations.md
src/: __init__.py  bandit_click_holley.py  config.py  gcs_utils.py  generate_bandit_deck.py  metrics.py  nig_convergence_simulation.py  (+1 more)
(+167 files in other folders)
